Дописал Swagger для Skins и установил модуль air для удобства
